--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -9,5 +9,6 @@
     <h1>from blog</h1>
     {% load static %}
     <a href="{%static 'blog/my.txt' %}"> click me</a>
+    <h1>hello world </h1>
 </body>
 </html>
